Add Badge Section

--- a/styles/main.css
+++ b/styles/main.css
@@ -11,6 +11,7 @@
 @import 'components/experience.css';
 @import 'components/education.css';
 @import 'components/skills.css';
+@import 'components/badges.css';
 @import 'components/publications.css';
 @import 'components/footer.css';
 @import 'components/animations.css';
